--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -3,7 +3,7 @@
   font-family: 'Manrope';
   font-style: normal;
   font-weight: 300;
-  src: url('../fonts/manrope-v15-cyrillic_latin-300.woff2') format('woff2');
+  src: url('../../fonts/manrope-300.woff2') format('woff2');
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   font-family: 'Manrope';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/manrope-v15-cyrillic_latin-regular.woff2') format('woff2');
+  src: url('../../fonts/manrope-400.woff2') format('woff2');
 }
 
 @font-face {
@@ -19,5 +19,5 @@
   font-family: 'Manrope';
   font-style: normal;
   font-weight: 500;
-  src: url('../fonts/manrope-v15-cyrillic_latin-500.woff2') format('woff2');
+  src: url('../../fonts/manrope-500.woff2') format('woff2');
 }
