Стилизует header, добавляет JS для header

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,3 +11,7 @@
 @import "global/container";
 
 // Blocks
+@import "blocks/btn";
+@import "blocks/header";
+@import "blocks/nav-list";
+@import "blocks/overlay.scss";
