Вносит стили и аккордеон в header блок

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,9 @@
 // Vendor
 // ---------------------------------
 @import "vendor/normalize";
+@import "vendor/accordion/data-accordion.scss";
+// @import "vendor/accordion/accordion.scss";
+
 
 // Global
 @import "variables";
