--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -11,11 +11,16 @@
 
 .header__button {
   z-index: 50;
+  width: 148px;
   gap: 20px;
   font-size: 14px;
   font-weight: 500;
   line-height: 14px;
   letter-spacing: 0.28px;
+  transition:
+    width $trans-modal,
+    color $trans-modal,
+    background-color $trans-modal;
 }
 
 .header__button svg:nth-of-type(2) {
@@ -35,20 +40,36 @@
   justify-content: space-between;
   color: $color-default-white;
   background-color: $color-cerulean-blue;
+
+  @include vp-767 {
+    width: 290px;
+  }
 }
 
 .header__nav {
-  display: none;
-}
-
-.header__nav.is-open {
+  opacity: 0;
+  visibility: hidden;
   z-index: 50;
   position: absolute;
-  display: block;
   top: 65px;
   right: 100px;
   width: 286px;
   padding: 35px 25px;
   background-color: $color-cerulean-blue;
   border-radius: 16px;
+  transition: opacity $trans-default, visibility $trans-default;
+
+  @include vp-1439 {
+    right: 45px;
+  }
+
+  @include vp-767 {
+    width: 290px;
+    right: 15px;
+  }
+}
+
+.header__nav.is-open {
+  opacity: 1;
+  visibility: visible;
 }
