Добавляем hero блок с одной карточкой разметку и стили. Без свайперва

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,7 +17,8 @@
 @import "blocks/btn";
 @import "blocks/header";
 @import "blocks/nav-list";
-@import "blocks/overlay.scss";
+@import "blocks/overlay";
+@import "blocks/hero";
 
 
 
