--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,6 +14,7 @@
 @import "global/container";
 
 // Blocks
+@import "blocks/no-scroll";
 @import "blocks/btn";
 @import "blocks/header";
 @import "blocks/nav-list";
