--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -1,7 +1,7 @@
 .hero__item {
   position: relative;
   min-height: 800px;
-  display: flex;
+  display: flex !important;
   justify-content: flex-start;
   align-items: flex-end;
   padding: 100px 100px 60px;
@@ -302,4 +302,40 @@
       background-size: 10px;
     }
   }
+}
+
+.hero__swiper-wrapper {
+  position: relative;
+}
+
+.hero__pagination {
+  z-index: 10;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  top: 410px;
+  left: 100px;
+  width: 100px;
+  height: 30px;
+}
+
+.hero__pagination .swiper-pagination-bullet {
+  z-index: 20;
+  width: 10px;
+  height: 10px;
+  border: 1px solid $color-cerulean-blue;
+  border-radius: 50%;
+}
+
+.hero__pagination .swiper-pagination-bullet {
+  background-color: $color-default-white;
+  border: 1px solid $color-cerulean-blue;
+  opacity: 1;
+}
+
+.hero__pagination .swiper-pagination-bullet-active {
+  background-color: $color-cerulean-blue;
+  opacity: 1;
 }
