--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -315,10 +315,21 @@
   justify-content: center;
   align-items: center;
   gap: 12px;
-  top: 410px;
+  // top: 410px;
+  bottom: 360px;
   left: 100px;
   width: 100px;
   height: 30px;
+
+  @include vp-1439 {
+    left: 46px;
+    bottom: 330px;
+  }
+
+  @include vp-767 {
+    left: 7px;
+    bottom: 333px;
+  }
 }
 
 .hero__pagination .swiper-pagination-bullet {
@@ -327,12 +338,11 @@
   height: 10px;
   border: 1px solid $color-cerulean-blue;
   border-radius: 50%;
-}
 
-.hero__pagination .swiper-pagination-bullet {
-  background-color: $color-default-white;
-  border: 1px solid $color-cerulean-blue;
-  opacity: 1;
+  @include vp-767 {
+    width: 8px;
+    height: 8px;
+  }
 }
 
 .hero__pagination .swiper-pagination-bullet-active {
