--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -9,3 +9,29 @@
   background-color: $color-default-white;
   cursor: pointer;
 }
+
+.btn__wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 18px;
+  background-color: $color-cerulean-blue;
+  border-radius: 50%;
+  transition: background-color $trans-modal;
+
+  @include vp-767 {
+    padding: 12px;
+  }
+}
+
+.btn__wrapper svg {
+  color: $color-default-white;
+  transition:
+    color $trans-modal,
+    transform $trans-modal;
+
+  @include vp-767 {
+    width: 8px;
+    height: 8px;
+  }
+}
