--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,7 +21,7 @@
 @import "blocks/overlay";
 @import "blocks/hero";
 @import "blocks/about";
-
+@import "blocks/programs";
 
 
 @import "blocks/footer";
