--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -6,7 +6,8 @@
   }
 
   @include vp-767 {
-    padding-bottom: 60px;
+    position: relative;
+    padding-bottom: 102px;
   }
 }
 
@@ -42,6 +43,13 @@
     letter-spacing: 0.24px;
   }
 
+  &--large {
+    @include vp-767 {
+      position: absolute;
+      bottom: 60px;
+    }
+  }
+
   &--little {
     align-self: center;
     padding: 5px;
@@ -61,6 +69,7 @@
   }
 
   @include vp-767 {
+    position: relative;
     width: 320px;
     // margin-left: auto;
     // margin-right: auto;
@@ -225,7 +234,7 @@
 
   @include vp-1439 {
     // max-width: 560px;
-    padding: 0 45px;
+    padding: 0 45px 0 0;
   }
 }
 
@@ -234,6 +243,9 @@
   gap: 10px;
 
   @include vp-767 {
+    position: absolute;
+    top: -20px;
+    right: 15px;
     gap: 8px;
   }
 }
