--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -36,6 +36,44 @@
 .programs__link {
   gap: 30px;
   background-color: $color-transparent;
+  transition:
+    background-color $trans-modal,
+    color $trans-modal;
+
+  &:hover,
+  &:focus {
+    background-color: $color-cerulean-blue;
+    color: $color-default-white;
+
+    .programs__link-svg-wrapper {
+      background-color: $color-default-white;
+    }
+
+    svg {
+      transform: rotate(45deg);
+      color: $color-cerulean-blue;
+    }
+  }
+
+  &:active {
+    color: rgb($color-default-white, 0.7);
+  }
+
+  &.disabled {
+    background-color: $color-transparent;
+    color: $color-mischka;
+    border-color: $color-mischka;
+    pointer-events: none;
+
+    .btn__wrapper {
+      background-color: $color-mischka;
+    }
+
+    svg {
+      color: $color-default-white;
+    }
+  }
+
 
   @include vp-767 {
     font-size: 12px;
@@ -54,7 +92,54 @@
     align-self: center;
     padding: 5px;
     border: none;
+
+    &:hover,
+    &:focus {
+      background-color: $color-transparent;
+    }
+
+    &:active {
+      svg {
+        opacity: 0.7;
+      }
+    }
+
+    &.disabled {
+      background-color: $color-transparent;
+      color: $color-mischka;
+      border-color: $color-mischka;
+      pointer-events: none;
+
+      .btn__wrapper {
+        background-color: $color-mischka;
+      }
+
+      svg {
+        color: $color-default-white;
+        opacity: 0.6;
+      }
+    }
   }
+
+  // .programs__slider-container {
+  //   // max-width: 1240px;
+  //   padding: 0 100px 22px;
+
+  //   @include vp-1439 {
+  //     max-width: 777px;
+  //     margin-left: auto;
+  //     margin-right: auto;
+  //     padding: 0 0 22px 45px;
+  //   }
+
+  //   @include vp-767 {
+  //     position: relative;
+  //     width: 320px;
+  //     // margin-left: auto;
+  //     // margin-right: auto;
+  //     padding: 0 15px;
+  //   }
+  // }
 }
 
 .programs__slider-container {
@@ -77,17 +162,17 @@
   }
 }
 
-.programs__slider.swiper {
-  // padding: 0 100px 22px;
+// .programs__slider.swiper {
+// padding: 0 100px 22px;
 
-  // @include vp-1439 {
-  //   padding: 0 0 22px 45px;
-  // }
+// @include vp-1439 {
+//   padding: 0 0 22px 45px;
+// }
 
-  // @include vp-767 {
-  //   padding: 0 15px;
-  // }
-}
+// @include vp-767 {
+//   padding: 0 15px;
+// }
+// }
 
 .programs__list {
   padding: 40px 0;
@@ -240,6 +325,7 @@
 
 .programs__buttons-container {
   display: flex;
+  align-self: center;
   gap: 10px;
 
   @include vp-767 {
@@ -286,6 +372,44 @@
   }
 
   @include vp-767 {}
+}
+
+.programs__link-btn-svg-wrapper {
+  width: 22px;
+  height: 22px;
+  display: flex;
+  padding: 6px;
+  background-color: $color-transparent;
+  border-radius: 50%;
+  transition: background-color $trans-default;
+}
+
+.programs__slider-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  cursor: pointer;
+}
+
+.programs__slider-button:hover .programs__link-btn-svg-wrapper {
+  background-color: $color-default-white;
+}
+
+.programs__slider-button:focus .programs__link-btn-svg-wrapper {
+  background-color: $color-default-white;
+}
+
+.programs__slider-button:active svg {
+  opacity: 0.7;
+}
+
+.programs__slider-button:disabled svg {
+  color: $color-mischka;
+}
+
+.programs__slider-button:disabled .programs__link-btn-svg-wrapper {
+  background-color: $color-transparent;
 }
 
 
