--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,6 +22,7 @@
 @import "blocks/hero";
 @import "blocks/about";
 @import "blocks/programs";
+@import "blocks/grant";
 
 
 @import "blocks/footer";
