Добавляет блок contacts

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,6 +24,8 @@
 @import "blocks/programs";
 @import "blocks/grant";
 
+@import "blocks/contacts";
+
 
 @import "blocks/footer";
 @import "blocks/footer-list";
