Вносит состояния в contacts

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -91,6 +91,11 @@
     font-size: 16px;
     line-height: 26px;
     color: $color-default-white;
+    border-bottom: 1px solid;
+    border-color: $color-transparent;
+    transition:
+      border-color $trans-default,
+      color $trans-default;
 
     @include vp-1439 {
       line-height: 20px;
@@ -100,6 +105,16 @@
       font-size: 14px;
     }
   }
+}
+
+.contacts__item a:hover,
+.contacts__item a:focus {
+  border-color: $color-default-white;
+}
+
+.contacts__item a:active {
+  color: rgb($color-default-white, 0.8);
+  border-color: $color-transparent;
 }
 
 .contacts__img-container {
