--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -71,6 +71,7 @@
 
     svg {
       color: $color-default-white;
+      opacity: 0.6;
     }
   }
 
@@ -120,26 +121,6 @@
       }
     }
   }
-
-  // .programs__slider-container {
-  //   // max-width: 1240px;
-  //   padding: 0 100px 22px;
-
-  //   @include vp-1439 {
-  //     max-width: 777px;
-  //     margin-left: auto;
-  //     margin-right: auto;
-  //     padding: 0 0 22px 45px;
-  //   }
-
-  //   @include vp-767 {
-  //     position: relative;
-  //     width: 320px;
-  //     // margin-left: auto;
-  //     // margin-right: auto;
-  //     padding: 0 15px;
-  //   }
-  // }
 }
 
 .programs__slider-container {
@@ -161,18 +142,6 @@
     padding: 0 15px;
   }
 }
-
-// .programs__slider.swiper {
-// padding: 0 100px 22px;
-
-// @include vp-1439 {
-//   padding: 0 0 22px 45px;
-// }
-
-// @include vp-767 {
-//   padding: 0 15px;
-// }
-// }
 
 .programs__list {
   padding: 40px 0;
@@ -412,8 +381,3 @@
 .programs__slider-button:disabled .programs__link-btn-svg-wrapper {
   background-color: $color-transparent;
 }
-
-
-@include vp-1439 {}
-
-@include vp-767 {}
