--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,8 +1,9 @@
 // Vendor
 // ---------------------------------
 @import "vendor/normalize";
-@import "vendor/accordion/data-accordion.scss";
+@import "vendor/accordion/data-accordion";
 // @import "vendor/accordion/accordion.scss";
+@import "vendor/select/custom-select";
 
 
 // Global
@@ -25,6 +26,7 @@
 @import "blocks/grant";
 
 @import "blocks/contacts";
+@import "blocks/feedback";
 
 
 @import "blocks/footer";
