--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,6 +24,7 @@
 @import "blocks/about";
 @import "blocks/programs";
 @import "blocks/grant";
+@import "blocks/faq";
 
 @import "blocks/contacts";
 @import "blocks/feedback";
