--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,8 +24,9 @@
 @import "blocks/about";
 @import "blocks/programs";
 @import "blocks/grant";
-@import "blocks/faq";
 
+@import "blocks/faq";
+@import "blocks/reviews";
 @import "blocks/contacts";
 @import "blocks/feedback";
 
