--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -294,19 +294,15 @@
   justify-content: center;
   align-items: center;
   gap: 12px;
-  bottom: 360px;
-  left: 100px;
+  bottom: 0;
+  left: 0;
   width: 100px;
   height: 30px;
 
-  @include vp-1439 {
-    left: 46px;
-    bottom: 330px;
-  }
+  @include vp-1439 {}
 
   @include vp-767 {
-    left: 7px;
-    bottom: 333px;
+    left: -10px;
   }
 }
 
