--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,7 +24,7 @@
 @import "blocks/about";
 @import "blocks/programs";
 @import "blocks/grant";
-
+@import "blocks/new";
 @import "blocks/faq";
 @import "blocks/reviews";
 @import "blocks/contacts";
