--- a/source/sass/blocks/new.scss
+++ b/source/sass/blocks/new.scss
@@ -114,6 +114,30 @@
       max-width: 290px;
       min-width: 290px;
     }
+
+    h3 {
+      width: 291px;
+
+      @include vp-1439 {
+        width: 207px;
+      }
+
+      @include vp-767 {
+        width: 200px;
+      }
+    }
+
+    .news__link-container {
+      width: 389px;
+
+      @include vp-1439 {
+        width: 240px;
+      }
+
+      @include vp-767 {
+        width: 263px;
+      }
+    }
   }
 
   span {
@@ -122,71 +146,19 @@
     background-color: $color-alabaster;
     border-radius: 0 12px 0 0;
     color: $color-cerulean-blue;
-
-    &::before {
-      content: "";
-      position: absolute;
-      top: -16px;
-      left: 0;
-      width: 16px;
-      height: 16px;
-      background-image: url("../../img/angle-up.svg");
-      background-repeat: no-repeat;
-      background-position: center;
-    }
-
-    &::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      right: -16px;
-      width: 16px;
-      height: 16px;
-      background-image: url("../../img/angle-up.svg");
-      background-repeat: no-repeat;
-      background-position: center;
-    }
-
-    @include vp-1439 {}
-
-    @include vp-767 {}
   }
 
-  h3 {
-    position: relative;
-    width: 291px;
-    padding: 18px 18px 6px 0;
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 26px;
-    color: $color-cerulean-blue;
-    background-color: $color-alabaster;
-    border-radius: 0 12px 0 0;
-
-    &::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      right: -16px;
-      width: 16px;
-      height: 16px;
-      background-image: url("../../img/angle-up.svg");
-      background-repeat: no-repeat;
-      background-position: center;
-    }
-
-    @include vp-1439 {}
-
-    @include vp-767 {}
+  &::before {
+    content: "";
+    position: absolute;
+    top: -16px;
+    left: 0;
+    width: 16px;
+    height: 16px;
+    background-image: url("../../img/angle-up.svg");
+    background-repeat: no-repeat;
+    background-position: center;
   }
-}
-
-.news__link-container {
-  position: relative;
-  width: 389px;
-  padding: 12px 18px 15px 0;
-  background-color: $color-alabaster;
-  border-radius: 0 12px 0 0;
 
   &::after {
     content: "";
@@ -198,6 +170,80 @@
     background-image: url("../../img/angle-up.svg");
     background-repeat: no-repeat;
     background-position: center;
+  }
+
+  h3 {
+    position: relative;
+    width: 214px;
+    padding: 18px 18px 6px 0;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 26px;
+    color: $color-cerulean-blue;
+    background-color: $color-alabaster;
+    border-radius: 0 12px 0 0;
+
+    @include vp-1439 {
+      font-size: 20px;
+      line-height: 24px;
+    }
+
+    @include vp-767 {
+      font-size: 16px;
+      line-height: 18px;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      right: -16px;
+      width: 16px;
+      height: 16px;
+      background-image: url("../../img/angle-up.svg");
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+  }
+}
+
+.news__link-container {
+  position: relative;
+  width: 240px;
+  display: flex;
+  gap: 16px;
+  padding: 12px 18px 15px 0;
+  background-color: $color-alabaster;
+  border-radius: 0 12px 0 0;
+
+  @include vp-767 {
+    gap: 10px;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: -16px;
+    width: 16px;
+    height: 16px;
+    background-image: url("../../img/angle-up.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  p {
+    font-size: 14px;
+    line-height: 18px;
+
+    @include vp-1439 {
+      line-height: 20px;
+    }
+
+    @include vp-767 {
+      font-size: 12px;
+      line-height: 14px;
+    }
   }
 }
 
@@ -211,6 +257,61 @@
   img {
     border-radius: 12px;
   }
+}
+
+.news__link {
+  &--little {
+
+    align-self: center;
+    padding: 5px;
+    border: none;
+
+    &:hover,
+    &:focus {
+      background-color: $color-transparent;
+
+      svg {
+        transform: rotate(45deg);
+        color: $color-cerulean-blue;
+      }
+    }
+
+    &:active {
+      svg {
+        opacity: 0.7;
+      }
+    }
+
+    &.disabled {
+      background-color: $color-transparent;
+      color: $color-mischka;
+      border-color: $color-mischka;
+      pointer-events: none;
+
+      .btn__wrapper {
+        background-color: $color-mischka;
+      }
+
+      svg {
+        color: $color-default-white;
+        opacity: 0.6;
+      }
+    }
+  }
+}
+
+.news__link-svg-wrapper {
+  width: 22px;
+  height: 22px;
+  display: flex;
+  padding: 6px;
+  background-color: $color-transparent;
+  border-radius: 50%;
+  transition: background-color $trans-default;
+}
+
+.news__link-svg-wrapper>svg {
+  color: $color-cerulean-blue;
 }
 
 @include vp-1439 {}
