Добавляет свайпер на все ширины

--- a/source/sass/blocks/new.scss
+++ b/source/sass/blocks/new.scss
@@ -33,6 +33,12 @@
   }
 }
 
+.news__tab-list-container {
+  display: flex;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
 .news__tab-list {
   display: flex;
   justify-content: center;
@@ -48,11 +54,15 @@
 }
 
 .news__tab-item {
+  flex-shrink: 0;
   padding: 14px 26px;
   border: 1px solid;
   border-color: $color-transparent;
   border-radius: 20px;
-  transition: border-color $trans-default;
+  cursor: pointer;
+  transition:
+    border-color $trans-default,
+    transform $trans-default;
 
   p {
     font-size: 14px;
@@ -97,11 +107,11 @@
   padding-bottom: 70px;
 
   @include vp-1439 {
-    height: 730px;
+    height: 730px; //??
   }
 
   @include vp-767 {
-    height: 590px;
+    height: 680px; //??
   }
 }
 
@@ -124,7 +134,8 @@
   @include vp-767 {
     max-width: 290px;
     min-width: 290px;
-    height: auto;
+    min-height: 240px;
+    max-height: 330px;
   }
 
   span {
@@ -446,6 +457,11 @@
   color: $color-default-white;
   background-color: $color-cerulean-blue;
   border-color: $color-cerulean-blue;
+}
+
+.swiper-grid-column>.swiper-wrapper {
+  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 @include vp-1439 {}
