--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -35,8 +35,12 @@
 
 .news__tab-list-container {
   display: flex;
-  overflow: hidden;
-  white-space: nowrap;
+  justify-content: center;
+  overflow-x: auto;
+
+  @include vp-767 {
+    justify-content: flex-start;
+  }
 }
 
 .news__tab-list {
@@ -54,7 +58,6 @@
 }
 
 .news__tab-item {
-  flex-shrink: 0;
   padding: 14px 26px;
   border: 1px solid;
   border-color: $color-transparent;
@@ -63,6 +66,10 @@
   transition:
     border-color $trans-default,
     transform $trans-default;
+
+  @include vp-1439 {
+    padding: 14px 20px;
+  }
 
   p {
     font-size: 14px;
@@ -152,7 +159,7 @@
       left: 0;
       width: 16px;
       height: 16px;
-      background-image: url("../../img/angle-up.svg");
+      background-image: url("../../img/angle-up-alabaster.svg");
       background-repeat: no-repeat;
       background-position: center;
     }
@@ -164,7 +171,7 @@
       right: -16px;
       width: 16px;
       height: 16px;
-      background-image: url("../../img/angle-up.svg");
+      background-image: url("../../img/angle-up-alabaster.svg");
       background-repeat: no-repeat;
       background-position: center;
     }
@@ -198,7 +205,7 @@
       right: -16px;
       width: 16px;
       height: 16px;
-      background-image: url("../../img/angle-up.svg");
+      background-image: url("../../img/angle-up-alabaster.svg");
       background-repeat: no-repeat;
       background-position: center;
     }
@@ -264,7 +271,7 @@
     right: -16px;
     width: 16px;
     height: 16px;
-    background-image: url("../../img/angle-up.svg");
+    background-image: url("../../img/angle-up-alabaster.svg");
     background-repeat: no-repeat;
     background-position: center;
   }
@@ -463,7 +470,3 @@
   flex-wrap: wrap;
   flex-direction: column;
 }
-
-@include vp-1439 {}
-
-@include vp-767 {}
