--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,7 +2,6 @@
 // ---------------------------------
 @import "vendor/normalize";
 @import "vendor/accordion/data-accordion";
-// @import "vendor/accordion/accordion.scss";
 @import "vendor/select/custom-select";
 
 
@@ -24,12 +23,10 @@
 @import "blocks/about";
 @import "blocks/programs";
 @import "blocks/grant";
-@import "blocks/new";
+@import "blocks/news";
 @import "blocks/faq";
 @import "blocks/reviews";
 @import "blocks/contacts";
 @import "blocks/feedback";
-
-
 @import "blocks/footer";
 @import "blocks/footer-list";
