--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -22,9 +22,6 @@
 .feedback__img-container {
   z-index: -1;
   position: absolute;
-  // top: 0;
-  // left: -100px;
-  // right: -100px;
 
   @include vp-1439 {
     padding-right: 45px;
@@ -123,22 +120,16 @@
 .feedback__form {
   display: flex;
   flex-direction: column;
-  // gap: 20px;
 
   @include vp-1439 {}
 
   @include vp-767 {}
 
-  label {
+  .feedback__form-label {
     margin-bottom: 14px;
     display: flex;
     flex-direction: column;
     gap: 12px;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 18px;
-    color: $color-alabaster;
-    opacity: 0.8;
 
     @include vp-1439 {
       line-height: 20px;
@@ -148,21 +139,30 @@
       font-size: 12px;
       line-height: 14px;
     }
-  }
 
-  label:last-of-type {
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
-    font-size: 12px;
-    line-height: 12px;
-    color: $color-default-white;
-    opacity: 0.9;
+    &:last-of-type {
+      flex-direction: row;
+      align-items: center;
+      gap: 10px;
 
-    @include vp-1439 {}
+      span {
+        font-size: 12px;
+        line-height: 12px;
+        color: $color-default-white;
+        opacity: 0.9;
+      }
 
-    @include vp-767 {
-      line-height: 14px;
+      @include vp-767 {
+        line-height: 14px;
+      }
+    }
+
+    span {
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 18px;
+      color: $color-alabaster;
+      opacity: 0.8;
     }
   }
 
@@ -281,6 +281,77 @@
 
   svg {
     color: $color-cerulean-blue;
+  }
+}
+
+.feedback__form-label--checkbox {
+  position: relative;
+  padding-left: 30px;
+  cursor: pointer;
+}
+
+.feedback__custom-checkbox {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  background-color: $color-transparent;
+  border: 1px solid;
+  border-color: rgb($color-default-white, 0.7);
+  border-radius: 2px;
+  transition:
+    background-color $trans-default,
+    border-color $trans-default;
+
+  &:hover,
+  &:focus {
+    border-color: $color-default-white;
+  }
+
+  svg {
+    display: none;
+    color: $color-default-white;
+  }
+}
+
+.feedback__default-checkbox:checked+.feedback__custom-checkbox {
+  background-color: $color-default-white;
+  border-color: $color-default-white;
+
+  &:hover,
+  &:focus {
+    background-color: $color-cerulean-blue;
+
+    svg {
+      color: $color-default-white;
+    }
+  }
+
+}
+
+.feedback__default-checkbox:checked+.feedback__custom-checkbox svg {
+  display: block;
+  color: $color-cerulean-blue;
+}
+
+.feedback__default-checkbox:disabled+.feedback__custom-checkbox {
+  border-color: $color-default-white;
+  background-color: rgb($color-transparent, 0.6);
+  cursor: default;
+}
+
+.feedback__default-checkbox:checked:disabled+.feedback__custom-checkbox {
+  background-color: $color-mischka;
+  border-color: $color-mischka;
+  cursor: default;
+
+  svg {
+    color: $color-default-white;
   }
 }
 
