--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -229,6 +229,20 @@
     background-color $trans-default,
     border-color $trans-default;
 
+  @include vp-1439 {
+    padding-left: 100px;
+  }
+
+  @include vp-767 {
+    min-width: 260px;
+    max-width: 260px;
+    align-self: center;
+    padding-left: 90px;
+    font-size: 12px;
+    line-height: 12px;
+    letter-spacing: 0.24px;
+  }
+
   &:hover,
   &:focus {
     background-color: $color-default-white;
@@ -262,17 +276,6 @@
       color: $color-default-white;
       opacity: 0.6;
     }
-  }
-
-  @include vp-1439 {
-    padding-left: 100px;
-  }
-
-  @include vp-767 {
-    padding-left: 90px;
-    font-size: 12px;
-    line-height: 12px;
-    letter-spacing: 0.24px;
   }
 }
 
@@ -331,7 +334,6 @@
       color: $color-default-white;
     }
   }
-
 }
 
 .feedback__default-checkbox:checked+.feedback__custom-checkbox svg {
