--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -267,6 +267,8 @@
     color: $color-mischka;
     border-color: $color-mischka;
     pointer-events: none;
+    cursor: not-allowed;
+    outline: none;
 
     .btn__wrapper--invert {
       background-color: $color-mischka;
@@ -344,19 +346,40 @@
 .feedback__default-checkbox:disabled+.feedback__custom-checkbox {
   border-color: $color-default-white;
   background-color: rgb($color-transparent, 0.6);
-  cursor: default;
+  pointer-events: none;
+  cursor: not-allowed;
+  outline: none;
 }
 
 .feedback__default-checkbox:checked:disabled+.feedback__custom-checkbox {
   background-color: $color-mischka;
   border-color: $color-mischka;
-  cursor: default;
+  pointer-events: none;
+  cursor: not-allowed;
+  outline: none;
 
   svg {
     color: $color-default-white;
   }
 }
 
-@include vp-1439 {}
+.feedback__form-label.is-invalid input {
+  border: 1px solid #ff5e66;
+  background: rgba(255, 94, 102, 0.2);
+}
 
-@include vp-767 {}
+.feedback__form-label.is-invalid textarea {
+  border: 1px solid #ff5e66;
+  background: rgba(255, 94, 102, 0.2);
+}
+
+.feedback__form-label.is-invalid .custom-select__button {
+  border: 1px solid #ff5e66;
+  background: rgba(255, 94, 102, 0.2);
+}
+
+.feedback__form-label.is-invalid .feedback__custom-checkbox {
+  border: 1px solid #FF5E66;
+  opacity: 0.7;
+  background: rgba(255, 94, 102, 0.20);
+}
