--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -162,13 +162,19 @@
   }
 }
 
-.feedback__form form {
-  display: flex;
-  flex-direction: column;
+.feedback__form {
+  form {
+    min-height: 543px;
+    display: flex;
+    flex-direction: column;
 
-  @include vp-1439 {}
+    @include vp-1439 {}
 
-  @include vp-767 {}
+    @include vp-767 {
+      min-height: 534px;
+    }
+  }
+
 
   input {
     min-height: 50px;
@@ -224,6 +230,7 @@
   // margin-top: 20px;
   display: flex;
   justify-content: space-between;
+  margin: auto 0 0;
   padding-left: 120px;
   color: $color-default-white;
   background-color: $color-cerulean-blue;
