--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,6 +3,7 @@
 @import "vendor/normalize";
 @import "vendor/accordion/data-accordion";
 @import "vendor/select/custom-select";
+// @import "vendor/modals/modal";
 
 
 // Global
@@ -30,3 +31,4 @@
 @import "blocks/feedback";
 @import "blocks/footer";
 @import "blocks/footer-list";
+@import "blocks/modal";
