--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -67,7 +67,8 @@
 
   @include vp-767 {
     width: 290px;
-    padding: 20px 14px 16px;
+    margin-bottom: -5px;
+    padding: 20px 14px 16px 15px;
     border-radius: 0 16px 16px 0;
   }
 }
@@ -113,7 +114,7 @@
 
   @include vp-767 {
     width: 267px;
-    padding: 1px 42px 15px 14px;
+    padding: 1px 42px 10px 15px;
     border-radius: 0 0 14px 0;
 
     &::after {
@@ -196,6 +197,18 @@
     background-color $trans-modal,
     color $trans-modal;
 
+  @include vp-1439 {
+    align-self: flex-start;
+  }
+
+  @include vp-767 {
+    padding-left: 20px;
+    gap: 21px;
+    font-size: 12px;
+    line-height: 12px;
+    letter-spacing: 0.24px;
+  }
+
   &:hover,
   &:focus {
     background-color: $color-cerulean-blue;
@@ -229,18 +242,6 @@
       color: $color-default-white;
       opacity: 0.6;
     }
-  }
-
-  @include vp-1439 {
-    align-self: flex-start;
-  }
-
-  @include vp-767 {
-    padding-left: 20px;
-    gap: 20px;
-    font-size: 12px;
-    line-height: 12px;
-    letter-spacing: 0.24px;
   }
 }
 
@@ -310,6 +311,7 @@
   z-index: 20;
   width: 10px;
   height: 10px;
+  background-color: $color-default-white;
   border: 1px solid $color-cerulean-blue;
   border-radius: 50%;
 
