--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -1,13 +1,13 @@
 .programs {
-  padding-bottom: 120px;
+  margin-bottom: 99px;
 
   @include vp-1439 {
-    padding-bottom: 100px;
+    margin-bottom: 100px;
   }
 
   @include vp-767 {
     position: relative;
-    padding-bottom: 102px;
+    margin-bottom: 102px;
   }
 }
 
@@ -16,20 +16,23 @@
   justify-content: space-between;
 }
 
-.programs__title-container>h2 {
-  font-size: 50px;
-  font-weight: 400;
-  line-height: 50px;
-  color: $color-cerulean-blue;
-
-  @include vp-1439 {
-    font-size: 34px;
+.programs__title-container {
+  h2 {
+    margin-top: 4px;
+    font-size: 50px;
+    font-weight: 400;
     line-height: 50px;
-  }
+    color: $color-cerulean-blue;
 
-  @include vp-767 {
-    font-size: 20px;
-    line-height: 20px;
+    @include vp-1439 {
+      font-size: 34px;
+      line-height: 50px;
+    }
+
+    @include vp-767 {
+      font-size: 20px;
+      line-height: 20px;
+    }
   }
 }
 
@@ -75,7 +78,6 @@
     }
   }
 
-
   @include vp-767 {
     font-size: 12px;
     line-height: 12px;
@@ -83,6 +85,13 @@
   }
 
   &--large {
+    padding: 4px 4px 2px 28px;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 14px;
+    letter-spacing: 0.28px;
+
     @include vp-767 {
       position: absolute;
       bottom: 60px;
@@ -120,12 +129,19 @@
         opacity: 0.6;
       }
     }
+
+    div {
+      width: 30px;
+      height: 30px;
+      display: flex;
+      padding: 8px;
+    }
   }
 }
 
 .programs__slider-container {
   // max-width: 1240px;
-  padding: 0 100px 22px;
+  padding: 0 100px 1px;
 
   @include vp-1439 {
     max-width: 1107px;
@@ -144,7 +160,7 @@
 }
 
 .programs__list {
-  padding: 40px 0;
+  padding: 46px 0 39px;
 
   @include vp-767 {
     padding: 30px 0;
@@ -209,10 +225,11 @@
 }
 
 .programs__item-title-container {
-  position: relative;
+  z-index: 10;
   width: 194px;
-  padding: 18px 18px 6px;
-  background-color: $color-default-white;
+  position: relative;
+  padding: 13px 18px 10px;
+  background-color: #ffffff;
   border-radius: 12px 12px 0 0;
 
   @include vp-1439 {
@@ -236,30 +253,35 @@
   }
 }
 
-.programs__item-title-container h3 {
-  font-size: 24px;
-  font-weight: 400;
-  line-height: 26px;
-  color: $color-cerulean-blue;
+.programs__item-title-container {
+  h3 {
+    margin-bottom: -9px;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 26px;
+    color: $color-cerulean-blue;
 
-  @include vp-1439 {
-    font-size: 20px;
-    line-height: 24px;
-  }
+    @include vp-1439 {
+      font-size: 20px;
+      line-height: 24px;
+    }
 
-  @include vp-767 {
-    font-size: 16px;
-    line-height: 18px;
+    @include vp-767 {
+      font-size: 16px;
+      line-height: 18px;
+    }
   }
 }
 
 .programs__item-description-container {
-  z-index: 1; //??
+  z-index: 1;
+  min-height: 79px;
   width: 321px;
   display: flex;
+  align-items: center;
   gap: 16px;
-  padding: 12px 18px 15px;
-  background-color: $color-default-white;
+  padding: 12px 14px 12px 18px;
+  background-color: #ffffff;
   border-radius: 0 12px 12px 12px;
 
   @include vp-1439 {
