--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -2,12 +2,12 @@
   margin-bottom: 99px;
 
   @include vp-1439 {
-    margin-bottom: 100px;
+    margin-bottom: 79px;
   }
 
   @include vp-767 {
     position: relative;
-    margin-bottom: 102px;
+    margin-bottom: 60px;
   }
 }
 
@@ -25,11 +25,13 @@
     color: $color-cerulean-blue;
 
     @include vp-1439 {
+      margin-top: 1px;
       font-size: 34px;
       line-height: 50px;
     }
 
     @include vp-767 {
+      margin-top: 3px;
       font-size: 20px;
       line-height: 20px;
     }
@@ -85,7 +87,7 @@
   }
 
   &--large {
-    padding: 4px 4px 2px 28px;
+    padding: 3px 3px 3px 29px;
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
@@ -94,7 +96,12 @@
 
     @include vp-767 {
       position: absolute;
-      bottom: 60px;
+      gap: 31px;
+      bottom: 0;
+      padding: 3px 3px 5px 29px;
+      font-size: 12px;
+      line-height: 12px;
+      letter-spacing: 0.24px;
     }
   }
 
@@ -147,7 +154,7 @@
     max-width: 1107px;
     margin-left: auto;
     margin-right: auto;
-    padding: 0 0 22px 45px;
+    padding: 0 0 1px 45px;
   }
 
   @include vp-767 {
@@ -155,15 +162,19 @@
     width: 320px;
     // margin-left: auto;
     // margin-right: auto;
-    padding: 0 15px;
+    padding: 0 15px 42px;
   }
 }
 
 .programs__list {
   padding: 46px 0 39px;
 
+  @include vp-1439 {
+    padding: 40px 0 39px;
+  }
+
   @include vp-767 {
-    padding: 30px 0;
+    padding: 32px 0 30px;
   }
 }
 
@@ -228,7 +239,7 @@
   z-index: 10;
   width: 194px;
   position: relative;
-  padding: 13px 18px 10px;
+  padding: 13px 18px 9px;
   background-color: #ffffff;
   border-radius: 12px 12px 0 0;
 
@@ -238,6 +249,7 @@
 
   @include vp-767 {
     width: 146px;
+    padding: 18px 18px 15px;
   }
 
   &::after {
@@ -251,9 +263,7 @@
     background-position: center;
     background-repeat: no-repeat;
   }
-}
 
-.programs__item-title-container {
   h3 {
     margin-bottom: -9px;
     font-size: 24px;
@@ -286,10 +296,13 @@
 
   @include vp-1439 {
     width: 263px;
+    gap: 7px;
+    padding: 8px 14px 10px 18px;
   }
 
   @include vp-767 {
     width: 270px;
+    min-height: 69px;
   }
 }
 
