--- a/source/sass/blocks/grant.scss
+++ b/source/sass/blocks/grant.scss
@@ -3,27 +3,28 @@
   background-color: $color-cerulean-blue;
 
   @include vp-1439 {
-    padding-bottom: 100px;
+    margin-bottom: 99px;
   }
 
   @include vp-767 {
-    padding-bottom: 60px;
+    margin-bottom: 60px;
   }
 }
 
 .grant__container {
   display: flex;
   justify-content: space-between;
-  padding: 120px 206px 120px 100px;
+  padding: 125px 206px 119px 100px;
 
   @include vp-1439 {
     flex-direction: column;
-    gap: 40px;
+    gap: 42px;
     padding: 100px 45px;
   }
 
   @include vp-767 {
-    padding: 67px 15px;
+    gap: 31px;
+    padding: 68px 15px 67px;
   }
 }
 
@@ -33,39 +34,42 @@
   @include vp-1439 {
     max-width: 678px;
   }
-}
 
-.grant__content-container h2 {
-  margin-bottom: 30px;
-  font-size: 50px;
-  font-weight: 400;
-  line-height: 50px;
-  color: $color-default-white;
+  h2 {
+    margin-bottom: 30px;
+    font-size: 50px;
+    font-weight: 400;
+    line-height: 50px;
+    color: $color-default-white;
 
-  @include vp-1439 {
-    font-size: 34px;
+    @include vp-1439 {
+      margin-bottom: 26px;
+      font-size: 34px;
+    }
+
+    @include vp-767 {
+      margin-bottom: 14px;
+      font-size: 20px;
+      line-height: 20px;
+    }
   }
 
-  @include vp-767 {
-    margin-bottom: 15px;
-    font-size: 20px;
-    line-height: 20px;
-  }
-}
+  p {
+    margin-bottom: 32px;
+    font-size: 16px;
+    line-height: 26px;
+    color: $color-alabaster;
 
-.grant__content-container p {
-  margin-bottom: 40px;
-  font-size: 16px;
-  line-height: 26px;
-  color: $color-alabaster;
+    @include vp-1439 {
+      max-width: 498px;
+      margin-bottom: 35px;
+      line-height: 20px;
+    }
 
-  @include vp-1439 {
-    max-width: 498px;
-    line-height: 20px;
-  }
-
-  @include vp-767 {
-    font-size: 14px;
+    @include vp-767 {
+      margin-bottom: 25px;
+      font-size: 14px;
+    }
   }
 }
 
@@ -86,19 +90,20 @@
 }
 
 .grant__list-container>p {
-  margin-bottom: 30px;
+  margin-top: 4px;
+  margin-bottom: 55px;
   font-size: 32px;
   line-height: 36px;
   color: $color-default-white;
 
   @include vp-1439 {
-    margin-bottom: 35px;
+    margin-bottom: 42px;
     font-size: 28px;
     line-height: 28px;
   }
 
   @include vp-767 {
-    margin-bottom: 20px;
+    margin-bottom: 26px;
     font-size: 18px;
     line-height: 22px;
   }
@@ -113,7 +118,7 @@
 
   @include vp-1439 {
     grid-template-columns: 1fr 1fr;
-    column-gap: 27px;
+    column-gap: 48px;
     row-gap: 25px;
   }
 
@@ -126,16 +131,16 @@
 
 .grant__item {
   position: relative;
-  padding: 30px 60px 30px 25px;
+  padding: 22px 60px 22px 25px;
   border: 1px solid $color-alabaster;
   border-radius: 16px;
 
   @include vp-1439 {
-    padding: 30px 25px;
+    padding: 25px 20px 25px 25px;
   }
 
   @include vp-767 {
-    padding: 24px 25px;
+    padding: 17px 25px 19px;
   }
 }
 
@@ -153,11 +158,11 @@
 
 .grant__item span {
   position: absolute;
-  width: 42px;
-  height: 42px;
-  top: -17px;
-  left: -21px;
-  padding: 10px;
+  width: 30px;
+  height: 35px;
+  top: -9px;
+  left: -15px;
+  padding: 10px 4px;
   background-color: $color-cerulean-blue;
   border-radius: 50px;
   text-align: center;
