--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -1,5 +1,5 @@
 .news {
-  margin-bottom: 125px;
+  margin-bottom: 124px;
 
   @include vp-1439 {
     margin-bottom: 100px;
@@ -17,7 +17,7 @@
 
   h2 {
     margin-top: 5px;
-    margin-bottom: 47px;
+    margin-bottom: 48px;
     font-size: 50px;
     font-weight: 400;
     line-height: 50px;
@@ -25,6 +25,8 @@
     color: $color-cerulean-blue;
 
     @include vp-1439 {
+      margin-top: 0;
+      margin-bottom: 31px;
       font-size: 34px;
     }
 
@@ -47,6 +49,9 @@
     display: none;
   }
 
+  @include vp-1439 {
+    margin-bottom: 29px;
+  }
 
   @include vp-767 {
     justify-content: flex-start;
@@ -78,7 +83,7 @@
     transform $trans-default;
 
   @include vp-1439 {
-    padding: 14px 20px;
+    padding: 11px 19px;
   }
 
   p {
@@ -124,11 +129,12 @@
   padding-bottom: 49px;
 
   @include vp-1439 {
-    height: 730px; //??
+    height: 730px;
+    padding-bottom: 40px;
   }
 
   @include vp-767 {
-    height: 680px; //??
+    height: 680px;
   }
 }
 
@@ -202,6 +208,7 @@
     border-radius: 0 12px 0 0;
 
     @include vp-1439 {
+      width: 207px;
       font-size: 20px;
       line-height: 24px;
     }
@@ -233,6 +240,11 @@
   padding: 9px 18px 12px 0;
   background-color: $color-alabaster;
   border-radius: 0 12px 0 0;
+
+  @include vp-1439 {
+    padding: 9px 17px 10px 0;
+    gap: 15px;
+  }
 
   @include vp-767 {
     gap: 10px;
@@ -285,6 +297,7 @@
 
     @include vp-1439 {
       width: 207px;
+      padding: 4px 18px 2px 0;
     }
 
     @include vp-767 {
@@ -299,10 +312,12 @@
 
     @include vp-1439 {
       width: 240px;
+      padding: 6px 17px 11px 0;
     }
 
     @include vp-767 {
       width: 263px;
+      // padding: 6px 17px 11px 0;
     }
   }
 }
@@ -378,6 +393,12 @@
   justify-content: space-between;
   align-self: center;
   gap: 10px;
+  margin-top: -4px;
+  margin-bottom: 3px;
+
+  @include vp-1439 {
+    margin-bottom: 4px;
+  }
 }
 
 .news__link-btn-svg-wrapper {
