--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -31,6 +31,8 @@
     }
 
     @include vp-767 {
+      margin-top: 1px;
+      margin-bottom: 27px;
       font-size: 20px;
       line-height: 20px;
     }
@@ -55,6 +57,7 @@
 
   @include vp-767 {
     justify-content: flex-start;
+    margin-bottom: 24px;
   }
 }
 
@@ -86,6 +89,10 @@
     padding: 11px 19px;
   }
 
+  @include vp-767 {
+    padding: 8px 13px;
+  }
+
   p {
     font-size: 14px;
     font-weight: 500;
@@ -94,12 +101,12 @@
     text-transform: uppercase;
     color: $color-cerulean-blue;
     opacity: 0.6;
-  }
 
-  @include vp-767 {
-    font-size: 12px;
-    line-height: 12px;
-    letter-spacing: 0.24px;
+    @include vp-767 {
+      font-size: 12px;
+      line-height: 12px;
+      letter-spacing: 0.24px;
+    }
   }
 }
 
@@ -134,7 +141,8 @@
   }
 
   @include vp-767 {
-    height: 680px;
+    height: 590px;
+    padding-bottom: 28px;
   }
 }
 
@@ -158,7 +166,7 @@
     max-width: 290px;
     min-width: 290px;
     min-height: 240px;
-    max-height: 330px;
+    max-height: 240px;
   }
 
   span {
@@ -214,6 +222,8 @@
     }
 
     @include vp-767 {
+      width: 200px;
+      padding: 10px 10px 4px 0;
       font-size: 16px;
       line-height: 18px;
     }
@@ -247,7 +257,9 @@
   }
 
   @include vp-767 {
+    width: 263px;
     gap: 10px;
+    padding: 13px 9px 7px 0;
   }
 
   &::after {
@@ -289,6 +301,8 @@
   @include vp-767 {
     max-width: 290px;
     min-width: 290px;
+    min-height: 330px;
+    max-height: 330px;
   }
 
   h3 {
@@ -302,6 +316,7 @@
 
     @include vp-767 {
       width: 200px;
+      padding: 10px 18px 4px 0;
     }
   }
 
@@ -317,7 +332,7 @@
 
     @include vp-767 {
       width: 263px;
-      // padding: 6px 17px 11px 0;
+      padding: 12px 9px 10px 0;
     }
   }
 }
@@ -452,6 +467,11 @@
   display: flex;
   gap: 20px;
   margin: 0 auto;
+
+  @include vp-767 {
+    transform: translateX(-36%);
+    gap: 16px;
+  }
 }
 
 .swiper-pagination-bullet {
