--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -2,7 +2,8 @@
   margin-bottom: 124px;
 
   @include vp-1439 {
-    margin-bottom: 100px;
+    // margin-bottom: 100px;
+    margin-bottom: 103px;
   }
 
   @include vp-767 {
