Переделывает блок header+hero по ручному ПП - тесты пройдены

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -22,8 +22,9 @@
 
 .header__button {
   z-index: 50;
-  width: 148px;
-  gap: 20px;
+  width: 133px;
+  gap: 19px;
+  padding-left: 18px;
   font-size: 14px;
   font-weight: 500;
   line-height: 14px;
