--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -56,13 +56,14 @@
 
 .hero__title-wrapper {
   width: 968px;
-  padding: 40px 50px 30px;
+  // padding: 40px 50px 30px;
+  padding: 40px 50px 23px;
   background-color: $color-default-white;
   border-radius: 0 30px 30px 0;
 
   @include vp-1439 {
     width: 659px;
-    padding: 30px 40px 24px;
+    padding: 30px 40px 20px;
   }
 
   @include vp-767 {
@@ -102,7 +103,8 @@
 .hero__description-container {
   position: relative;
   width: 496px;
-  padding: 1px 50px 35px;
+  // padding: 1px 50px 35px;
+  padding: 1px 50px 28px;
   margin-top: -1px;
   background-color: $color-default-white;
   border-radius: 0 0 0 30px;
@@ -128,13 +130,16 @@
       background-position: center;
       background-repeat: no-repeat;
       background-size: 10px;
+
+      @include vp-767 {
+        top: 6px;
+      }
     }
   }
 }
 
 .hero__description-container>p {
   line-height: 26px;
-
 
   @include vp-1439 {
     line-height: 20px;
@@ -149,11 +154,17 @@
   position: relative;
   width: 276px;
   display: flex;
-  padding: 6px 50px 40px 31px;
+  // padding: 6px 50px 40px 31px;
+  padding: 7px 50px 33px 31px;
   margin-top: -1px;
   margin-left: -1px;
   background-color: $color-default-white;
   border-radius: 0 0 30px 0;
+
+  @include vp-1439 {
+    width: 268px;
+    padding: 4px 50px 33px 31px;
+  }
 
   &::after {
     content: "";
@@ -247,16 +258,16 @@
 
 .hero__pagination-decorative-container {
   position: absolute;
-  top: -27px;
+  top: -38px;
   width: 94px;
-  height: 38px;
+  height: 39px;
   background-color: $color-default-white;
   border-radius: 20px 20px 0 0;
 
   &::after {
     content: "";
     position: absolute;
-    bottom: 10px;
+    bottom: 0;
     right: -18px;
     width: 20px;
     height: 20px;
@@ -268,6 +279,7 @@
   @include vp-767 {
     width: 80px;
     height: 28px;
+    top: -28px;
     border-radius: 12px 12px 0 0;
 
     &::after {
@@ -295,7 +307,7 @@
   justify-content: center;
   align-items: center;
   gap: 12px;
-  bottom: 0;
+  bottom: 5px;
   left: 0;
   width: 100px;
   height: 30px;
@@ -304,6 +316,7 @@
 
   @include vp-767 {
     left: -10px;
+    bottom: -1px;
   }
 }
 
